[package]
name = "rserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
http = "1"
bytes = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2"] }
hyper-util = { version = "0.1.4", features = ["tokio", "server-auto", "service"] }
tower = { version = "0.5", features = ["util","timeout"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.99"

[dev-dependencies]
axum = "0.8"
reqwest = { version = "0.12", features = ["http2", "json"] }
